Tries to remove obsolete things