@@ -24,6 +24,7 @@
     <hibernate-validator.version>6.0.7.Final</hibernate-validator.version>
     <freemarker.version>2.3.27-incubating</freemarker.version>
     <javax.el-api.version>3.0.0</javax.el-api.version>
+    <h2.version>1.4.196</h2.version>
     <!-- Startup class -->
     <application.class>org.ort.school.app.SchoolCRMKt</application.class>
   </properties>
@@ -412,78 +413,6 @@
     </pluginRepository>
   </pluginRepositories>
   <profiles>
-    <profile>
-      <id>java-10</id>
-      <activation>
-        <jdk>10</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <source>11</source>
-              <target>11</target>
-              <!--<compilerArgs>
-                <arg>&#45;&#45;add-modules=java.xml.bind</arg>
-                <arg>&#45;&#45;add-modules=java.se.ee</arg>
-              </compilerArgs>-->
-              <fork>true</fork>
-            </configuration>
-            <dependencies>
-              <dependency>
-                <groupId>org.ow2.asm</groupId>
-                <artifactId>asm</artifactId>
-                <version>7.0-beta</version>
-              </dependency>
-            </dependencies>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <!--<configuration>
-              <argLine>&#45;&#45;add-modules=java.xml.bind &#45;&#45;add-modules=java.se.ee</argLine>
-            </configuration>-->
-            <dependencies>
-              <dependency>
-                <groupId>org.ow2.asm</groupId>
-                <artifactId>asm</artifactId>
-                <version>7.0-beta</version>
-              </dependency>
-            </dependencies>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>java-9</id>
-      <activation>
-        <jdk>9</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <source>1.9</source>
-              <target>1.9</target>
-              <compilerArgs>
-                <arg>--add-modules=java.xml.bind</arg>
-                <arg>--add-modules=java.se.ee</arg>
-              </compilerArgs>
-              <fork>true</fork>
-            </configuration>
-            <!-- without forking compilation happens in the
-                                                                same process, so no arguments are applied -->
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--add-modules=java.xml.bind --add-modules=java.se.ee</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <id>license</id>
       <activation>
